--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.3",
     "tailwindcss": "^3.3.5"
   },
   "devDependencies": {
